load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "run_coverage",
    testonly = True,
    srcs = [
        "RunCoverage.kt",
    ],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/coverage:coverage_runner",
        "//scripts/src/java/org/oppia/android/scripts/coverage:coverage_reporter",
        "//scripts/src/java/org/oppia/android/scripts/common:bazel_client",
        "//scripts/src/java/org/oppia/android/scripts/common:git_client",
        "//scripts/src/java/org/oppia/android/scripts/proto:coverage_java_proto_lite",
    ],
)

kt_jvm_library(
    name = "coverage_runner",
    testonly = True,
    srcs = [
        "CoverageRunner.kt",
    ],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/common:bazel_client",
        "//scripts/src/java/org/oppia/android/scripts/common:git_client",
        "//scripts/src/java/org/oppia/android/scripts/proto:coverage_java_proto_lite",
    ],
)

kt_jvm_library(
    name = "coverage_reporter",
    testonly = True,
    srcs = [
        "CoverageReporter.kt",
    ],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/common:bazel_client",
        "//scripts/src/java/org/oppia/android/scripts/common:git_client",
        "//scripts/src/java/org/oppia/android/scripts/proto:coverage_java_proto_lite",
    ],
)